--- a/assets/styles/common/_variables.scss
+++ b/assets/styles/common/_variables.scss
@@ -6,4 +6,14 @@ $main-sm-columns:       12;
 $sidebar-sm-columns:    4;
 
 // Colors
-$brand-primary:         #27ae60;
+$brand-primary:         #D7B3Af;
+
+// Typography
+$font-family-sans-serif: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif !default;
+
+// Navbar
+$nav-size: 60px;
+$navlink-pad: ($nav-size - 20px) / 4
+
+// Media queries
+
