--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -15,5 +15,6 @@
 @import "layouts/sidebar";
 @import "layouts/footer";
 @import "layouts/pages";
+@import "layouts/frontpage";
 @import "layouts/posts";
 @import "layouts/tinymce";
