--- a/assets/styles/components/_grid.scss
+++ b/assets/styles/components/_grid.scss
@@ -10,7 +10,11 @@
 }
 
 .container {
-	width: 90%;
+	width: 95%;
 	margin: 0 auto;
 	max-width: 1400px;
+
+	@media (min-width: $screen-sm-min) {
+		width: 90%;
+	}
 }
