--- a/assets/styles/common/_global.scss
+++ b/assets/styles/common/_global.scss
@@ -1,3 +1,10 @@
+@font-face {
+	font-family: 'Open Sans';
+	src: url(fonts/OpenSans-Light-webfont.eot);
+	font-weight: 200;
+	font-style: normal;
+}
+
 html, body {
 	height: 100%;
 }
