--- a/assets/styles/layouts/_frontpage.scss
+++ b/assets/styles/layouts/_frontpage.scss
@@ -1,21 +1,10 @@
-.home .splash {
-	background-image: url(../images/header.jpg);
-}
-
-.about .splash {
-	background: none;
-
-	h1 {
-		margin-top: 100px;
-	}
-}
-
 .splash {
 	background-position: center center;
 	background-repeat: no-repeat;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	background-size: cover;
+	text-align: center;
 	height: 600px;
 	width: 100%;
 	position: relative;
@@ -28,7 +17,237 @@
 		right: 0;
 		bottom: 0;
 		left: 0;
-		opacity: 0.4;
+		opacity: 0.5;
 		background-color: #000;
+	}
+}
+
+
+// Call to action
+.headline, .tagline {
+	position: relative;
+	font-weight: 700;
+	font-size: 60px;
+	color: #fff;
+	margin-top: 120px;
+	margin-bottom: 0;
+	text-transform: uppercase;
+}
+
+.tagline {
+	font-weight: 300;
+	font-size: 20px;
+	margin-top: 20px;
+	margin-bottom: 50px;
+	text-transform: none;
+}
+
+.btn-contact {
+	display: inline-block;
+	color: #fff;
+	font-weight: 600;
+	background-color: $brand-primary;
+	position: relative;
+	width: 200px;
+	padding: 10px;
+	border-radius: 2px;
+	text-transform: uppercase;
+	transition: background-color 0.2s;
+
+	&:hover, &:focus {
+		color: #fff;
+		background-color: darken($brand-primary, 5%);
+	}
+}
+
+// Blog section
+.recent-news {
+	text-align: center;
+	font-weight: 300;
+	margin-top: 30px;
+	margin-bottom: 50px;
+
+	&:before, &:after {
+		content: "";
+		display: inline-block;
+		height: 1px;
+		position: relative;
+		vertical-align: middle;
+		width: 14%;
+		background: rgba(0,0,0,0.2);
+
+		@media (min-width: $screen-sm-min) {
+			width: 20%;
+		}
+	}
+
+	&:before {
+		margin-right: 15px;
+	}
+
+	&:after {
+		margin-left: 15px;
+	}
+}
+
+.news-item {
+	padding: 0 10px 10px;
+	margin-bottom: 25px;
+}
+
+.post-image {
+	background-position: center;
+	background-size: cover;
+	height: 270px;
+
+	@media (min-width: $screen-sm-min) {
+		height: 240px;
+	}
+}
+
+.post-content {
+	position: relative;
+	background-color: #fff;
+	padding: 20px;
+	min-height: 150px;
+
+	@media (min-width: $screen-sm-min) {
+		padding: 25px;
+		min-height: 250px;
+	}
+
+	.post-title {
+		font-size: 20px;
+		line-height: 1.2;
+		height: 20px * 1.2 * 2;
+		margin: 0 0 5px;
+		font-weight: 800;
+		display: block;
+		display: -webkit-box;
+		-webkit-line-clamp: 2;
+		-webkit-box-orient: vertical;
+		overflow: hidden;
+		text-overflow: ellipsis;
+
+		a {
+			color: #222;
+			transition: color 0.3s;
+		}
+	}
+
+	// Date published
+	.post-meta {
+		font-size: 16px;
+		color: #888;
+	}
+
+	.post-category {
+		position: absolute;
+		top: -12px;
+		padding: 1px 6px;
+		color: #fff;
+		border-radius: 1px;
+	}
+
+	.post-excerpt {
+		display: block;
+		display: -webkit-box;
+		height: 18px * 1.4 * 2;
+		font-size: 18px;
+		line-height: 1.4;
+		margin: 0 auto 15px;
+		-webkit-line-clamp: 2;
+		-webkit-box-orient: vertical;
+		overflow: hidden;
+		text-overflow: ellipsis;
+
+		@media (min-width: $screen-sm-min) {
+			height: 18px * 1.4 * 3;
+			-webkit-line-clamp: 3;
+		}
+	}
+
+	// Continue reading permalink
+	.post-continued a {
+		font-weight: 600;
+		color: #222;
+		padding-bottom: 1px;
+		border-bottom: 2px solid;
+		transition: color 0.3s;
+	}
+
+	// Colors for recent news cards according to category
+	&.competitions {
+		.post-category {
+			background-color: $competitions;
+		}
+
+		.post-title a:hover {
+			color: $competitions;
+		}
+
+		.post-continued a {
+			border-color: $competitions;
+
+			&:hover {
+				color: $competitions;
+			}
+		}
+	}
+
+	&.announcements {
+		.post-category {
+			background-color: $announcements;
+		}
+
+		.post-title a:hover {
+			color: $announcements;
+		}
+
+		.post-continued a {
+			border-color: $announcements;
+
+			&:hover {
+				color: $announcements;
+			}
+		}
+	}
+
+	&.graduates {
+		.post-category {
+			background-color: $graduates;
+		}
+
+		.post-title a:hover {
+			color: $graduates;
+		}
+
+		.post-continued a {
+			border-color: $graduates;
+
+			&:hover {
+				color: $graduates;
+			}
+		}
+	}
+}
+
+
+// Permalink button to blog
+.more-news {
+	display: block;
+	text-align: center;
+	font-size: 16px;
+	max-width: 250px;
+	margin: 0 auto 30px;
+	padding: 10px 0;
+	background-color: #aaa;
+	border-radius: 3px;
+	color: #fff;
+	transition: background-color 0.2s;
+
+	&:hover {
+		color: #fff;
+		background-color: #777;
 	}
 }
