--- a/assets/styles/layouts/_header.scss
+++ b/assets/styles/layouts/_header.scss
@@ -22,15 +22,21 @@
 			padding: $navlink-pad 0;
 			margin: 0 20px;
 			color: #fff;
-			text-transform: uppercase;
+			opacity: 0.7;
+			text-transform: lowercase;
 			text-align: center;
 			-webkit-font-smoothing: antialiased;
 			transition: opacity 0.3s, color 0.3s ease-in-out;
 
 			&:hover {
-				opacity: 0.7;
+				opacity: 1;
 			}
 		}
+	}
+
+	// active nav link
+	.current-menu-item {
+
 	}
 }
 
