--- a/assets/styles/common/_global.scss
+++ b/assets/styles/common/_global.scss
@@ -1,10 +1,3 @@
-@font-face {
-	font-family: 'Open Sans';
-	src: url(fonts/OpenSans-Light-webfont.eot);
-	font-weight: 200;
-	font-style: normal;
-}
-
 html, body {
 	height: 100%;
 }
@@ -15,4 +8,17 @@ a {
 	&:active {
 		text-decoration: none;
 	}
+}
+
+* {
+	box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+}
+
+*:before,
+*:after {
+	box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
 }
