--- a/assets/styles/common/_variables.scss
+++ b/assets/styles/common/_variables.scss
@@ -6,7 +6,10 @@ $main-sm-columns:       12;
 $sidebar-sm-columns:    4;
 
 // Colors
-$brand-primary:         #2274A5;
+$brand-primary:         #2683ba;
+$dark-primary:          #2f2f2f;
+$light-grey-primary:    #f7f7f7;
+$dark-grey-primary:     #616161;
 
 // Typography
 $font-family-sans-serif: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif !default;
