--- a/assets/styles/layouts/_footer.scss
+++ b/assets/styles/layouts/_footer.scss
@@ -1,4 +1,8 @@
 footer {
-	padding: 20px 0;
+	padding: 25px 0;
 	text-align: center;
+	border-top: 1px solid #e5e6e9;
+	color: #545454;
+	// background: $dark-primary;
+	// color: #fff;
 }
