--- a/assets/styles/layouts/_posts.scss
+++ b/assets/styles/layouts/_posts.scss
@@ -131,7 +131,8 @@
 		text-align: center;
 		font-size: 16px;
 		margin: 0 auto;
-		padding: 10px 20px;
+		padding: 10px 0;
+		width: 150px;
 		background-color: #aaa;
 		border-radius: 3px;
 		color: #fff;
