Post image hover, uncategorized colors, cleanup cat-specific css

--- a/assets/styles/common/_variables.scss
+++ b/assets/styles/common/_variables.scss
@@ -22,3 +22,4 @@ $navlink-pad: ($nav-size - 20px) / 4;
 $competitions: #D81159;
 $announcements: #F5BB00;
 $graduates: #218380;
+$uncategorized: #8D99AE
