--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 /*
 Theme Name:         Jin's Abacus
-Theme URI:          http://danielliu.xyz/jinsabacus;
-Description:        Customized theme for Jin's Abacus built on Sage.
-Version:            1.0.0
+Theme URI:          http://danielliu.xyz/jinsabacus/
+Description:        Customized theme for Jin's Mental Arithmetic Academy.
+Version:            1.1
 Author:             Daniel Liu
-Author URI:         http://danielliu.xyz;
+Author URI:         http://danielliu.xyz/
 Text Domain:        jins
 
 License:            MIT License
